<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_margin="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_settings"
        />



        <TextView
            android:layout_marginTop="160dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:text="@string/profile_set"
            android:textColor="@color/main"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingTop="35dp"
            android:background="@drawable/subsettings_rounded"
            />

    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:text="@string/notif"
        android:textColor="@color/main"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="35dp"
        android:background="@drawable/subsettings_rounded"
        />

    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:text="@string/privacy"
        android:textColor="@color/main"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="35dp"
        android:background="@drawable/subsettings_rounded"
        />

    <TextView
        android:layout_marginTop="260dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_gravity="center"
        android:textColor="@color/main"
        />


</LinearLayout>