<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <ImageView
        android:id="@+id/notifback"
        android:layout_margin="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_settings"
        />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/subsettings_rounded"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:columnCount="2"
            >

        <TextView
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:layout_columnWeight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:textSize="20dp"
            android:textStyle="bold"
            />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="40dp"
                android:src="@drawable/toggle_off" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="30dp"
                android:src="@drawable/toggle_circle" />

            <TextView
                android:layout_marginTop="29dp"
                android:gravity="left"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:textSize="15dp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="30dp"
                android:src="@drawable/toggle_circle" />

            <TextView
                android:layout_marginTop="29dp"
                android:gravity="left"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reply"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="30dp"
                android:src="@drawable/toggle_circle" />

            <TextView
                android:layout_marginTop="29dp"
                android:gravity="left"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/msg"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="30dp"
                android:src="@drawable/toggle_circle" />

            <TextView
                android:layout_marginTop="29dp"
                android:gravity="left"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/listing"
                android:textSize="15dp"
                android:textStyle="bold"
                />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/subsettings_rounded"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:columnCount="2"
            >

            <TextView
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vibrate"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="30dp"
                android:src="@drawable/toggle_off" />

        </GridLayout>

    </LinearLayout>
</LinearLayout>